# allegro_hand_ros2

./: .gitignore  README.md  test.txt
allegro_hand_bringup/: CMakeLists.txt  getting_started_plexus.md  getting_started_v4.md  package.xml  readme.md
allegro_hand_bringup/config/plexus/dual_hand/: dual_hand.ros2_control.xacro  dual_hand.urdf.xacro  ros2_controllers.yaml
allegro_hand_bringup/config/plexus/single_hand/: allegro_hand.ros2_control.xacro  allegro_hand.urdf.xacro  diagnostic_analyzers.yaml  ros2_controllers.yaml
allegro_hand_bringup/config/v4/dual_hand/: dual_hand.ros2_control.xacro  dual_hand.urdf.xacro  ros2_controllers.yaml
allegro_hand_bringup/config/v4/single_hand/: allegro_hand.ros2_control.xacro  allegro_hand.urdf.xacro  diagnostic_analyzers.yaml  ros2_controllers.yaml
allegro_hand_bringup/launch/: allegro_hand.launch.py  allegro_hand_duo.launch.py  allegro_hand_plexus.launch.py
allegro_hand_bringup/rviz/plexus/: dual_hand.rviz  hand.rviz
allegro_hand_bringup/rviz/v4/: hand.rviz
allegro_hand_bringup/script/: common.py  finger_wave.py  opening_releasing.py  simple_motion.py
allegro_hand_control_msgs/: CMakeLists.txt  package.xml
allegro_hand_control_msgs/action/: GraspCommand.action
allegro_hand_controllers/grasp_controllers/: CHANGELOG.rst  CMakeLists.txt  package.xml  readme.md  ros_control_plugins.xml
allegro_hand_controllers/grasp_controllers/include/allegro_hand_grasp_controllers/: ema_filter.hpp  grasp_action_effort_controller.hpp  grasp_action_position_controller.hpp  hardware_interface_adapter.hpp  visibility_control.hpp
allegro_hand_controllers/grasp_controllers/src/: grasp_action_controller.cpp  grasp_action_controller_parameters.yaml  grasp_action_effort_controller.cpp  grasp_action_position_controller.cpp
allegro_hand_controllers/position_effort_controller/: CMakeLists.txt  allegro_hand_position_effort_controller_plugin.xml  package.xml  readme.md
allegro_hand_controllers/position_effort_controller/include/allegro_hand_position_effort_controller/: position_effort_controller.hpp  visibility_control.h
allegro_hand_controllers/position_effort_controller/src/: position_effort_controller.cpp  position_effort_controller_parameters.yaml
allegro_hand_grasp_library/: CMakeLists.txt  package.xml  readme.md
allegro_hand_grasp_library/include/allegro_hand_grasp_library/: ah_grasp.hpp
allegro_hand_grasp_library/src/: ah_grasp.cpp  ah_grasp_interface.hpp  ah_grasp_plexus.cpp  ah_grasp_v4.cpp  ah_grasp_v4_ref.cpp
allegro_hand_grasp_library/test/: test_library.cpp
allegro_hand_hardwares/common/io/: CMakeLists.txt  package.xml  readme.md
allegro_hand_hardwares/common/io/include/allegro_hand_io/: comm.hpp
allegro_hand_hardwares/common/io/src/: comm.cpp  comm_can.cpp  comm_modbus.cpp  comm_udp.cpp
allegro_hand_hardwares/common/io/test/: test_library.cpp
allegro_hand_hardwares/common/utility/: CMakeLists.txt  package.xml  readme.md
allegro_hand_hardwares/common/utility/include/allegro_hand_utility/: ros_utility.hpp  utility.hpp
allegro_hand_hardwares/common/utility/src/: ros_utility.cpp  utility.cpp
allegro_hand_hardwares/common/utility/test/: test_library.cpp
allegro_hand_hardwares/plexus/description/: CMakeLists.txt  package.xml
allegro_hand_hardwares/plexus/description/config/: initial_positions.yaml  pd_gains.yaml
allegro_hand_hardwares/plexus/description/meshes/left/: Finger-0.STL  Finger-1.STL  Palm-left.STL  Thumb-0-left.STL  Thumb-1-left.STL  Thumb-2.STL
allegro_hand_hardwares/plexus/description/meshes/right/: Finger-2.STL  Finger-3.STL  Finger-4.STL  Palm.STL  Thumb-0.STL  Thumb-1.STL  Thumb-3.STL  Thumb-4.STL
allegro_hand_hardwares/plexus/description/urdf/: allegro_plexus_left.xacro  allegro_plexus_right.xacro  fixme.md
allegro_hand_hardwares/plexus/hardware/: CMakeLists.txt  allegro_hand_plexus_hardware.xml  package.xml  readme.md
allegro_hand_hardwares/plexus/hardware/include/allegro_hand_plexus_hardware/: generic_system.hpp  hardware_interface.hpp
allegro_hand_hardwares/plexus/hardware/src/: generic_system.cpp  plexus_hardware_interface.cpp  plexus_interface_test.cpp  plexus_sdk.cpp  plexus_sdk.hpp  plexus_spec.cpp  plexus_spec.hpp
allegro_hand_hardwares/v4/description/: CMakeLists.txt  package.xml
allegro_hand_hardwares/v4/description/config/: initial_positions.yaml  pd_gains.yaml
allegro_hand_hardwares/v4/description/urdf/: allegro_hand_description_left.xacro  allegro_hand_description_right.xacro
allegro_hand_hardwares/v4/hardware/: CMakeLists.txt  allegro_hand_v4_hardware.xml  package.xml  readme.md
allegro_hand_hardwares/v4/hardware/include/allegro_hand_v4_hardware/: generic_system.hpp  hardware_interface.hpp
allegro_hand_hardwares/v4/hardware/src/: generic_system.cpp  v4_hardware_interface.cpp  v4_interface_test.cpp  v4_sdk.cpp  v4_sdk.hpp  v4_spec.cpp  v4_spec.hpp
allegro_hand_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
allegro_hand_moveit_config/config/: allegro_hand.ros2_control.xacro  allegro_hand.srdf  allegro_hand.urdf.xacro  initial_positions.yaml  joint_limits.yaml  kinematics.yaml  moveit.rviz  moveit_controllers.yaml  ros2_controllers.yaml
allegro_hand_moveit_config/launch/: demo.launch.py  move_group.launch.py  moveit_rviz.launch.py  rsp.launch.py  setup_assistant.launch.py  spawn_controllers.launch.py  static_virtual_joint_tfs.launch.py  warehouse_db.launch.py
allegro_hand_ros2/: CMakeLists.txt  package.xml
rqt_forward_command_controller/: CHANGELOG.rst  package.xml  plugin.xml  readme.md  setup.cfg  setup.py
rqt_forward_command_controller/resource/: forward_command_controller.ui
rqt_forward_command_controller/rqt_forward_command_controller/: double_editor.py  forward_command_controller.py  joint_limits_urdf.py  rqt_forward_command_controller.py  utils.py
