<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>allegro_hand_ros2</name>
  <version>0.0.1</version>
  <description>Metapackage for the Allegro Hand ROS 2 packages.</description>

  <maintainer email="wonikrobotics@gmail.com">Wonikrobotics-git</maintainer>
  <license>BSD</license>
  <url type="website">https://www.allegrohand.com/</url>
  <url type="website">https://github.com/Wonikrobotics-git/</url>

  <maintainer email="jijang@wonik.com">('c')void</maintainer> 
  <author email="jjieureka@gmail.com">('c')void</author>
  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>allegro_hand_bringup</exec_depend>
  <exec_depend>allegro_hand_control_msgs</exec_depend>
  <exec_depend>allegro_hand_grasp_controllers</exec_depend>
  <exec_depend>allegro_hand_position_effort_controller</exec_depend>
  <exec_depend>allegro_hand_grasp_library</exec_depend>
  <exec_depend>allegro_hand_io</exec_depend>
  <exec_depend>allegro_hand_utility</exec_depend>
  <exec_depend>allegro_hand_plexus_description</exec_depend>
  <exec_depend>allegro_hand_plexus_hardware</exec_depend>
  <exec_depend>allegro_hand_v4_description</exec_depend>
  <exec_depend>allegro_hand_v4_hardware</exec_depend>
  <exec_depend>rqt_forward_command_controller</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
    <metapackage />
  </export>
</package>